2005-04-06  Dan Williams  <dcbw@redhat.com>

	* dhcpcd/dhcpcd.c
		- (dhcp_interface_free): fix a file descriptor leak that may have
			caused network drivers to not unload due to refcounts > 0

2005-04-04  Dan Williams  <dcbw@redhat.com>

	* src/NetworkManagerDevice.c:
		- (nm_completion_scan_has_results): restore pre-completion-patch behavior
			of only erroring after the second consecutive scan times out.  Also
			don't exit when the card requires more time than we can give it, just
			log the event and continue.

2005-04-01  Dan Williams <dcbw@redhat.com>

	Perform scans during device activation, if needed.  Both activation 
	and scans run in the same GMainContext.  Therefore, if an access point
	is not found by the time the device starts activation, it will not
	be available until after activation.  We now try to scan during
	activation (in nm_wa_test) every 15s so that all available access
	points are more likely to be found and available for the activation
	procedure.

	Also change nm_wireless_link_state_handle() to only update the "best"
	AP if we are not forcing a device and if we are not about to change
	state.  This attempts to work around a race when forcing a device,
	where the forced AP would get cleared out too soon by the link state
	checking timeout in the main thread, and the activation attempt with
	that AP would fail.

2005-04-01  Dan Williams <dcbw@redhat.com>

	* src/NetworkManagerAPList.c
		- (nm_ap_list_print_members): print out MAC addresses in text for,
			not as a hex number

2005-04-01  Dan Williams <dcbw@redhat.com>

	* po/POTFILES.in
		- Update with new translatables

2005-03-31  Dan Williams <dcbw@redhat.com>

	Tighten up handling of wireless devices that don't support wireless
	scanning (ie, Orinoco).  Due to restructuring of code, these devices
	hadn't been doing pseudo-scanning for a while either and would just
	spin waiting for an access point.  They are now manual devices where